# PokerNightCap

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: main.py  pyproject.toml
backend/api/: routes.py  ws.py
backend/db/: database.py  models.py
backend/game/: deck.py  evaluator.py  room.py  state.py
backend/schemas/: messages.py
backend/tests/: conftest.py  test_deck.py  test_evaluator.py  test_messages.py  test_room.py  test_routes.py  test_ws.py
frontend/: game.html  index.html
frontend/css/: style.css
frontend/js/: animations.js  chat.js  game.js  socket.js
