[project]
name = "pokernightcap-backend"
version = "0.1.0"
description = "FastAPI backend for PokerNightCap."
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false
